# nextcloud-contacts-to-gequdio

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  nextcloud_contacts_to_gequdio.py  pyproject.toml
.github/workflows/: automated-checks.yml  release.yml
.make/conf.d/: tests.mk
nextcloud_contacts_to_gequdio/: __init__.py  nextcloud_to_gequdio.py  settings.ini.example
nextcloud_contacts_to_gequdio/tests/: __init__.py  test_gequdio_xml.py
